Fixed close button positioning

--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -56,8 +56,7 @@
       .x5-m-close {
         font-size: 14px;
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
+        top: 24px;
         right: 24px;
         color: transparent;
         cursor: pointer;
