--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -1,28 +1,28 @@
 .x5-m-wrapper {
+  align-items: center;
+  display: flex;
   height: 100%;
+  justify-content: center;
   left: 0;
   position: fixed;
+  text-align: initial;
   top: 0;
   width: 100%;
-  text-align: initial;
   &.x5-m-overlay {
     background-color: #0006;
     z-index: 5;
   }
   .x5-m-loading-wrapper {
+    align-items: center;
     background-color: #0006;
     border-radius: 10px;
+    display: flex;
     height: 100%;
+    justify-content: center;
     left: 0;
     position: absolute;
     top: 0;
     width: 100%;
-  }
-  .x5-m-loading {
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
   }
   .x5-m-modal {
     background-color: #fff;
@@ -30,11 +30,7 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
     display: flex;
     flex-flow: column;
-    left: 50%;
     max-height: 90%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
     transition: all 0.3s ease;
     width: 90%;
     &.x5-m-attention {
