Fixed close button not being contained in header

--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -45,6 +45,7 @@
       font-size: 22px;
       font-weight: bold;
       height: 64px;
+      position: relative;
       width: 100%;
       .x5-m-title {
         padding: 20px 54px 16px 24px;
