--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -74,7 +74,7 @@
       border-top: #eee 1px solid;
       height: 48px;
       flex-shrink: 1;
-      text-align: end;
+      text-align: right;
       width: 100%;
       button {
         background-color: transparent;
