--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,8 @@
 @import 'animations';
+@import 'transitions';
+@import 'overlay';
+@import 'wrapper';
+@import 'modal';
+@import 'error';
+@import 'loading';
 @import 'spinner';
-@import 'modals';
