--- a/src/scss/_extra.scss
+++ b/src/scss/_extra.scss
@@ -1,14 +1,19 @@
 .x5-m-extra {
+  text-align: center;
   p {
+    width: 85%;
+    text-align: left;
     margin: 0;
     font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
   }
   input {
-    margin: 10px 0;
+    margin: 10px auto;
+    border-radius: 10px;
     padding: 10px;
-    width: 380px;
+    width: 85%;
     font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
+    border: 1px silver solid;
   }
 }
